# tracerecorder_tests

./: .gitignore  CMakeLists.txt  README.md  update_mocks.py
UnitTest_RUNNER/: CMakeLists.txt  main.c
UnitTest_trcCounter/: CMakeLists.txt  Counter_UnitTest.c  main.c
UnitTest_trcCounter/config/: config.h
UnitTest_trcCounter/include/: Counter_UnitTest.h
UnitTest_trcCounter/mocks/: trcHardwarePort.h
UnitTest_trcDependency/: CMakeLists.txt  Dependency_UnitTest.c  main.c
UnitTest_trcDependency/include/: Dependency_UnitTest.h
UnitTest_trcDependency/mocks/: trcEvent.h
UnitTest_trcDiagnostics/: CMakeLists.txt  Diagnostics_UnitTest.c  main.c
UnitTest_trcDiagnostics/include/: Diagnostics_UnitTest.h
UnitTest_trcDiagnostics/mocks/: trcAssert.h
UnitTest_trcEntryTable/: CMakeLists.txt  EntryTable_UnitTest.c  main.c
UnitTest_trcEntryTable/include/: EntryTable_UnitTest.h
UnitTest_trcError/: CMakeLists.txt  Error_UnitTest.c  main.c
UnitTest_trcError/include/: Error_UnitTest.h
UnitTest_trcError/mocks/: trcStackMonitor.h
UnitTest_trcEvent/: .project  CMakeLists.txt  Event_UnitTest.c  main.c
UnitTest_trcEvent/config/: trcConfig.h
UnitTest_trcEvent/include/: Event_UnitTest.h
UnitTest_trcEventBuffer/: CMakeLists.txt  EventBuffer_UnitTest.c  main.c
UnitTest_trcEventBuffer/include/: EventBuffer_UnitTest.h
UnitTest_trcEventVerification/: CMakeLists.txt  EventVerification_UnitTest.c  main.c
UnitTest_trcEventVerification/config/: trcConfig.h
UnitTest_trcEventVerification/include/: EventVerification_UnitTest.h
UnitTest_trcEventVerification/mocks/: trcISR.h  trcRecorder.h  trcStreamPort.h
UnitTest_trcExtension/: CMakeLists.txt  Extension_UnitTest.c  main.c
UnitTest_trcExtension/include/: Extension_UnitTest.h
UnitTest_trcHeap/: CMakeLists.txt  Heap_UnitTest.c  main.c
UnitTest_trcHeap/include/: Heap_UnitTest.h
UnitTest_trcHeap/mocks/: trcTimestamp.h
UnitTest_trcISR/: CMakeLists.txt  ISR_UnitTest.c  main.c
UnitTest_trcISR/config/: trcConfig.h
UnitTest_trcISR/include/: ISR_UnitTest.h
UnitTest_trcISR/mocks/: trcEvent.c  trcKernelPort.h
UnitTest_trcInterval/: CMakeLists.txt  Interval_UnitTest.c  main.c
UnitTest_trcInterval/config/: trcConfig.h
UnitTest_trcInterval/include/: Interval_UnitTest.h
UnitTest_trcMultiCoreEventBuffer/: CMakeLists.txt  MultiCoreEventBuffer_UnitTest.c  main.c
UnitTest_trcMultiCoreEventBuffer/include/: MultiCoreEventBuffer_UnitTest.h
UnitTest_trcObject/: CMakeLists.txt  Object_UnitTest.c  main.c
UnitTest_trcObject/include/: Object_UnitTest.h
UnitTest_trcPrint/: CMakeLists.txt  Print_UnitTest.c  main.c
UnitTest_trcPrint/config/: trcConfig.h
UnitTest_trcPrint/include/: Print_UnitTest.h
UnitTest_trcRunnable/: CMakeLists.txt  Runnable_UnitTest.c  main.c
UnitTest_trcRunnable/include/: Runnable_UnitTest.h
UnitTest_trcStackMonitor/: CMakeLists.txt  StackMonitor_UnitTest.c  main.c
UnitTest_trcStackMonitor/config/: trcConfig.h
UnitTest_trcStackMonitor/include/: StackMonitor_UnitTest.h
UnitTest_trcStackMonitor/mocks/: trcError.h
UnitTest_trcStateMachine/: CMakeLists.txt  StateMachine_UnitTest.c  main.c
UnitTest_trcStateMachine/include/: StateMachine_UnitTest.h
UnitTest_trcStaticBuffer/: CMakeLists.txt  StaticBuffer_UnitTest.c  main.c
UnitTest_trcStaticBuffer/config/: trcConfig.h
UnitTest_trcStaticBuffer/include/: StaticBuffer_UnitTest.h
UnitTest_trcString/: CMakeLists.txt  String_UnitTest.c  main.c
UnitTest_trcString/config/: trcConfig.h
UnitTest_trcString/include/: String_UnitTest.h
UnitTest_trcTask/: CMakeLists.txt  Task_UnitTest.c  main.c
UnitTest_trcTask/config/: trcConfig.h
UnitTest_trcTask/include/: Task_UnitTest.h
UnitTest_trcTimestamp/: CMakeLists.txt  Timestamp_UnitTest.c  main.c
UnitTest_trcTimestamp/include/: Timestamp_UnitTest.h
cmocka/: .editorconfig  .gitignore  .gitlab-ci.yml  .project  AUTHORS  CMakeLists.txt  ChangeLog  CompilerChecks.cmake  ConfigureChecks.cmake  DefineOptions.cmake  INSTALL.md  cmocka-build-tree-settings.cmake.in  config.h.cmake  meson.build  meson_options.txt
cmocka/coverity/: README
cmocka/doc/: mainpage.dox
cmocka/doc/that_style/: LICENSE
cmocka/example/: CMakeLists.txt  allocate_module_test.c  assert_macro_test.c  assert_module_test.c  calculator_test.c
cmocka/example/mock/chef_wrap/: CMakeLists.txt  chef.c  waiter_test_wrap.c
cmocka/include/: CMakeLists.txt  cmocka.h  cmocka_private.h
cmocka/src/: CMakeLists.txt  cmocka.c  cmocka.def
cmocka/tests/: CMakeLists.txt  cmocka_test.cmake  ctest-default.cmake  meson.build  test_alloc.c  test_assert_macros.c  test_assert_macros_fail.c  test_assert_range.c  test_assert_range_fail.c  test_assert_u_int.c  test_assert_u_int_fail.c  test_basics.c  test_double_macros.c  test_exception_handler.c  test_expect_check.c  test_expect_check_fail.c  test_fixtures.c  test_float_macros.c  test_group_fixtures.c  test_group_setup_assert.c  test_group_setup_fail.c  test_groups.c  test_ordering.c  test_ordering_fail.c  test_returns.c  test_returns_fail.c  test_setup_fail.c  test_skip.c  test_skip_filter.c  test_stop.c  test_stop_fail.c  test_string.c  test_strmatch.c  test_wildcard.c
unit_test_mocks/: trcEvent.h  trcPrint.h  trcRecorder.h  trcTask.h
(+1 files in other folders)
